# obs-studio

./: .editorconfig  .env  .env.development  .gitattributes  .gitignore  .gitmodules  .prettierrc.json  CMakeCache.template.txt  CMakeLists.txt  CMakePresets.json  README.rst  build.bat  build.sh  cspell.config.yaml  install.bat  obs-studio.bat  obs.bat  pyproject.toml  setup.bat  setup.cmd  setup.sh  taskfile.yaml  uninstall.bat  vcpkg.json
.cspell/: obs-studio-dictionary.txt
.github/actions/check-changes/: action.yaml
.github/lib/: build-project.yaml
.github/scripts/: .build.zsh  Build-Windows.ps1
.github/workflows/: build-project.yaml  check-format.yaml  clang-format.yml  clean-caches.yml  crowdin-sync-upload.yml  docs.yml  flatpak.yml  main.yml  pr-pull.yaml  publish.yaml  push.yaml  steam.yml  streamfx.yaml
.github/workflows-disabled/: scheduled.yaml  sign-windows.yaml
.run/: OBS Studio.run.xml  obs.run.xml
CI/: check-cmake.sh  check-format.sh
CI/linux/: 00_install_llvm.sh
UI/frontend-plugins/: CMakeLists.txt
UI/frontend-plugins/streamfx/: CMakeLists.txt
UI/frontend-plugins/streamfx/components/dynamic-mask/source/filters/: filter-dynamic-mask.cpp
UI/frontend-plugins/streamfx/components/mirror/source/sources/: source-mirror.cpp
UI/frontend-plugins/streamfx/components/nvidia/source/nvidia/vfx/: nvidia-vfx-superresolution.cpp
UI/frontend-plugins/streamfx/source/obs/gs/: gs-texture.cpp  gs-texture.hpp  gs-vertex.cpp  gs-vertex.hpp
UI/frontend-plugins/streamfx/source/ui/: ui-about.cpp
build-aux/: install-llvm.sh
build-aux/config/: cspell-obs-studio.dict  use-vcpkg.cmake
cmake/Modules/: CompilerConfig.cmake  FindPythonWindows.cmake
cmake/macos/: compilerconfig.cmake
libobs/: obs-source.c
libobs/graphics/: math-defs.h
plugins/coreaudio-encoder/: encoder.cpp
plugins/mac-capture/: mac-screen-capture.m
plugins/obs-ffmpeg/: obs-ffmpeg-url.h
plugins/obs-stream-fx/: BUILDING.md
plugins/obs-x264/: CMakeLists.txt
plugins/vlc-video/: vlc-video-plugin.c
plugins/win-capture/graphics-hook/: vulkan-capture.c
plugins/win-dshow/: win-dshow.cpp
plugins/win-wasapi/: win-wasapi.cpp
