[project]
name = "obs-studio"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }
]
dependencies = [
    "jinja2>=3.1.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "sphinx>=7.3.7",
    "sphinx-rtd-theme>=2.0.0",
    "antlr4-python3-runtime>=4.13.1",
    "argh>=0.31.2",
    "click>=8.1.7",
    "coloredlogs>=15.0.1",
    "humanfriendly>=10.0",
    "jinja2>=3.1.4",
    "markupsafe>=2.1.5",
    "path-py>=12.5.0",
    "pyyaml>=6.0.1",
    "six>=1.16.0",
    "watchdog>=4.0.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "future>=1.0.0",
    "htmlmin>=0.1.12",
    "httplib2>=0.22.0",
    "importlib-metadata>=8.0.0",
    "joblib>=1.4.2",
    "jsmin>=3.0.1",
    "livereload>=2.7.0",
    "lunr>=0.7.0.post1",
    "markdown>=3.6",
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.28",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-simple-hooks>=0.1.5",
    "nltk>=3.8.1",
    "plantuml>=0.3.0",
    "plantuml-markdown>=3.9.7",
    "pygments>=2.18.0",
    "pymdown-extensions>=10.8.1",
    "regex>=2024.5.15",
    "tornado>=6.4.1",
    "tqdm>=4.66.4",
    "zipp>=3.19.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/obs_studio"]
