[project]
name = "obs-studio"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }]
dependencies = ["jinja2>=3.1.4"]
readme = "README.rst"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "antlr4-python3-runtime>=4.13.1",
  "argh>=0.31.2",
  "click>=8.1.7",
  "coloredlogs>=15.0.1",
  "future>=1.0.0",
  "htmlmin>=0.1.12",
  "httplib2>=0.22.0",
  "humanfriendly>=10.0",
  "importlib-metadata>=8.0.0",
  "jinja2>=3.1.4",
  "joblib>=1.4.2",
  "jsmin>=3.0.1",
  "livereload>=2.7.0",
  "lunr>=0.7.0.post1",
  "markdown-include>=0.8.1",
  "markdown>=3.6",
  "markupsafe>=2.1.5",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-material>=9.5.28",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocs-simple-hooks>=0.1.5",
  "mkdocs>=1.6.0",
  "nltk>=3.8.1",
  "path-py>=12.5.0",
  "plantuml-markdown>=3.9.7",
  "plantuml>=0.3.0",
  "pygments>=2.18.0",
  "pymdown-extensions>=10.8.1",
  "pytest-cov>=5.0.0",
  "pytest>=8.2.2",
  "pyyaml>=6.0.1",
  "regex>=2024.5.15",
  "six>=1.16.0",
  "sphinx-rtd-theme>=2.0.0",
  "sphinx>=7.3.7",
  "tornado>=6.4.1",
  "tqdm>=4.66.4",
  "watchdog>=4.0.1",
  "zipp>=3.19.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  "UI/frontend-plugins/stream-fx/third-party/obs-studio/plugins/obs-websocket/deps/qr/python",
]

[tool.hatch.build.targets.sdist]
exclude = [
  ".build/",
  ".deps/",
  ".git/",
  ".github/",
  ".task/",
  ".venv/",
  "vcpkg_installed/",
  "UI/frontend-plugins/stream-fx/third-party/nvidia-maxine-ar-sdk/samples/external/",
  "UI/frontend-plugins/stream-fx/third-party/nvidia-maxine-vfx-sdk/samples/external/",
  "build_ubuntu/",
  "build-aux/",
  "build-aux/vcpkg/",
  "test/",
]
